Fix for chrome overflow

--- a/styles/Landing.module.css
+++ b/styles/Landing.module.css
@@ -3,7 +3,7 @@
   grid-template-rows: repeat(5, 1fr);
   grid-template-columns: repeat(6, 1fr);
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
   animation: bg 1s forwards linear;
 }
